[tool.poetry]
name = "async-cpu-bound"
version = "0.1.0"
description = ""
authors = ["Anton Dubovik <anton.dubovik@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
locust = "^2.32.5"
aiohttp = "^3.11.11"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
